X   0.3
    * Add Bow + Knockback = pierce blocks
    * Add Shovel + Silk Touch II = harvest fallen snow, fire
    * Add Pickaxe + Silk Touch II = harvest ice
    * Merge functionality of older [Sublimation](http://dev.bukkit.org/server-mods/sublimation/) project (add sublimateIce option)
    * Change strike lightning 100+ meters away to Sword + Power (was Sword + Flame)

2012-02-03  0.2
    * Add Bow + Sharpness = increase velocity
    * Add Bow + Aqua Affinity = freeze water, stun players
    * Add Bow + Bane of Arthropods = poison
    * Add Bow + Efficiency = instant shoot
    * Add Sword + Flame = strike lightning 100+ meters away
    * Fix Hoe + Respiration to grow saplings and crops using right-click
    * Fix Flint & Steel + Fire Protection to now combine with Fire Aspect
    * Fix Axe + Flame on saplings (etc.) causing IllegalArgumentException
    * Tested with CraftBukkit 1.1-R3

2012-01-29  0.1
    * Initial release